# daily-server/model/daily.go
@@ -6,7 +6,7 @@ type Daily struct {
 	ID         primitive.ObjectID   `json:"id" bson:"_id"`
 	Text       string               `json:"text" bson:"text" binding:"required"`
 	Author     primitive.ObjectID   `json:"author" bson:"author"`
-	Topic      string               `json"topic" bson:"topic"`
+	Topics     []string             `json"topics" bson:"topics"`
 	Keywords   []string             `json:"keywords" bson:"keywords,omitempty"`
 	Emotions   Emotion              `json:"emotions" bson:"emotions"`
 	Image      string               `json:"image" bson:"image"`
@@ -48,7 +48,7 @@ type EditDailyImageDTO struct {
 type ExploreDailyDTO struct {
 	ID       primitive.ObjectID `json:"id" bson:"_id"`
 	Text     string             `json:"text" bson:"text" binding:"required"`
-	Topic    string             `json"topic" bson:"topic"`
+	Topics   []string           `json"topics" bson:"topics"`
 	Emotions Emotion            `json:"emotions" bson:"emotions"`
 	Image    string             `json:"image" bson:"image"`
 }
