# daily-server/model/statistics.go
@@ -8,5 +8,5 @@ type StatisticsDTO struct {
 	DailiesWritten int      `json:"dailiesWritten"` // Number of dailies written
 	Mood           string   `json:"mood"`           // Current mood based on user's entries
 	Streak         int      `json:"streak"`         // Current streak of daily entries
-	Topic          string   `json:"topic"`          // Currently focused topic
+	Topics         []string `json:"topics"`         // Currently focused topic
 }
